fix main - add qrCode && events collection && Twilio Code send [commit method]
