# _ide_helper_models.php
@@ -10,70 +10,3 @@
  */
 
 
-namespace App\Models{
-/**
- * App\Models\User
- *
- * @property int $id
- * @property string $public_id
- * @property string|null $name
- * @property string|null $login
- * @property string $email
- * @property string $phone
- * @property \Illuminate\Support\Carbon|null $email_verified_at
- * @property string $password
- * @property int|null $pin
- * @property string $role
- * @property string $internal_role
- * @property string|null $remember_token
- * @property \Illuminate\Support\Carbon|null $created_at
- * @property \Illuminate\Support\Carbon|null $updated_at
- * @property-read \Illuminate\Notifications\DatabaseNotificationCollection|\Illuminate\Notifications\DatabaseNotification[] $notifications
- * @property-read int|null $notifications_count
- * @property-read \Illuminate\Database\Eloquent\Collection|\Laravel\Sanctum\PersonalAccessToken[] $tokens
- * @property-read int|null $tokens_count
- * @method static \Database\Factories\UserFactory factory(...$parameters)
- * @method static \Illuminate\Database\Eloquent\Builder|User newModelQuery()
- * @method static \Illuminate\Database\Eloquent\Builder|User newQuery()
- * @method static \Illuminate\Database\Eloquent\Builder|User query()
- * @method static \Illuminate\Database\Eloquent\Builder|User whereCreatedAt($value)
- * @method static \Illuminate\Database\Eloquent\Builder|User whereEmail($value)
- * @method static \Illuminate\Database\Eloquent\Builder|User whereEmailVerifiedAt($value)
- * @method static \Illuminate\Database\Eloquent\Builder|User whereId($value)
- * @method static \Illuminate\Database\Eloquent\Builder|User whereInternalRole($value)
- * @method static \Illuminate\Database\Eloquent\Builder|User whereLogin($value)
- * @method static \Illuminate\Database\Eloquent\Builder|User whereName($value)
- * @method static \Illuminate\Database\Eloquent\Builder|User wherePassword($value)
- * @method static \Illuminate\Database\Eloquent\Builder|User wherePhone($value)
- * @method static \Illuminate\Database\Eloquent\Builder|User wherePin($value)
- * @method static \Illuminate\Database\Eloquent\Builder|User wherePublicId($value)
- * @method static \Illuminate\Database\Eloquent\Builder|User whereRememberToken($value)
- * @method static \Illuminate\Database\Eloquent\Builder|User whereRole($value)
- * @method static \Illuminate\Database\Eloquent\Builder|User whereUpdatedAt($value)
- */
-	class User extends \Eloquent {}
-}
-
-namespace App\Models{
-/**
- * App\Models\Verify
- *
- * @property int $id
- * @property string|null $code
- * @property int $user_id
- * @property int $count_sms Number of messages to register per day
- * @property \Illuminate\Support\Carbon|null $created_at
- * @property \Illuminate\Support\Carbon|null $updated_at
- * @method static \Illuminate\Database\Eloquent\Builder|Verify newModelQuery()
- * @method static \Illuminate\Database\Eloquent\Builder|Verify newQuery()
- * @method static \Illuminate\Database\Eloquent\Builder|Verify query()
- * @method static \Illuminate\Database\Eloquent\Builder|Verify whereCode($value)
- * @method static \Illuminate\Database\Eloquent\Builder|Verify whereCountSms($value)
- * @method static \Illuminate\Database\Eloquent\Builder|Verify whereCreatedAt($value)
- * @method static \Illuminate\Database\Eloquent\Builder|Verify whereId($value)
- * @method static \Illuminate\Database\Eloquent\Builder|Verify whereUpdatedAt($value)
- * @method static \Illuminate\Database\Eloquent\Builder|Verify whereUserId($value)
- */
-	class Verify extends \Eloquent {}
-}
-
